# Boat-Racing-Game

./: .gitignore  CMakeLists.txt  README.md  animation.cpp  animation.h  boat.cpp  boat.h  camera.cpp  camera.h  curve.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  modelcurve.cpp  modelcurve.h  particles.cpp  particles.h  plane.cpp  plane.h  platform.cpp  platform.h  shader.cpp  shader.h  sky.cpp  sky.h  sound.cpp  sound.h  soundcloud.cpp  soundcloud.h  sparks.cpp  sparks.h  text.cpp  text.h  texture.cpp  texture.h  track.cpp  track.h  water.cpp  (+1 more)
data/: CMakeLists.txt
data/font/: CMakeLists.txt  andale_mono_regular_48.zfi  arial_black_regular_65.zfi  liberation_mono_bold_65.zfi  liberation_mono_regular_65.zfi  liberation_sans_bold_65.zfi
data/model/: CMakeLists.txt  cube.blend  hydroplane-1.blend  hydroplane-1.md  hydroplane-1.mtl  race-bouy.blend  test.blend  test.mtl
data/particles/: CMakeLists.txt
data/shader/: CMakeLists.txt  font.fsh  font.vsh  generic.vsh  modelcurve.vsh  sdf.fsh  water.fsh
data/track/: CMakeLists.txt  test.track
